--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,5 +27,6 @@ endif()
 add_executable(ia-ep1 
     src/agent.h src/agent.cc 
     src/environment.h src/environment.cc
+    src/mapmatrix.h src/mapmatrix.cc
     src/errors.h src/forward_declarations.h src/actions.h
     src/main.cc)
