--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ if (UNIX OR MINGW)
 endif()
 
 add_executable(ia-ep1 
-    src/agent.h src/agent.cc src/agent-breadthfirst.cc src/agent-depthfirst.cc
+    src/agent.h src/agent.cc src/agent-breadthfirst.cc src/agent-depthfirst.cc src/agent-astar.cc
     src/environment.h src/environment.cc
     src/mapmatrix.h src/mapmatrix.cc
     src/errors.h src/forward_declarations.h src/actions.h
